allows users to update and delete their reviews and modifies app.js and index.html

--- a/frontendMod2ProjectJapanForGithub/index.html
+++ b/frontendMod2ProjectJapanForGithub/index.html
@@ -67,7 +67,7 @@
           name="category"
           placeholder="attraction, restaurant, bar?"
         />
-        <input type="submit" value="Update" />
+        <input type="submit" value="Search" />
       </form>
     </div>
     <div class="review-list"></div>
