--- a/frontendMod2ProjectJapanForGithub/location.html
+++ b/frontendMod2ProjectJapanForGithub/location.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <a href="index.html">Home</a>
-    <h1>City of Interest</h1>
+    <h1 class="city-name">City of Interest</h1>
     <script src="location.js"></script>
   </body>
 </html>
