--- a/frontendMod2ProjectJapanForGithub/index.html
+++ b/frontendMod2ProjectJapanForGithub/index.html
@@ -11,7 +11,7 @@
     </header>
     <nav class="nav-bar">
       <div class="city-filter">
-        Search By City: <a href="location.html?location=Tokyo">Tokyo</a>
+        Search By City: <a href="location.html?location=Tokyo&price=0">Tokyo</a>
         <a href="location.html?location=Kyoto">Kyoto</a>
         <a href="location.html?location=Osaka">Osaka</a>
         <a href="location.html?location=Fukuoka">Fukuoka</a>
