updates readability throughout for the user.

--- a/frontendMod2ProjectJapanForGithub/category.html
+++ b/frontendMod2ProjectJapanForGithub/category.html
@@ -9,6 +9,7 @@
   <body>
     <a href="index.html">Home</a>
     <h1>Activity Recommendations By Category</h1>
+    <h3 class="price-range">0=Free 1=Cheap 2=Medium 3=Expensive</h3>
     <script src="category.js"></script>
   </body>
 </html>
