--- a/frontendMod2ProjectJapanForGithub/location.html
+++ b/frontendMod2ProjectJapanForGithub/location.html
@@ -8,6 +8,7 @@
   <body>
     <a href="index.html">Home</a>
     <h1 class="city-name">City of Interest</h1>
+    <h3 class="price-range">0=Free 1=Cheap 2=Medium 3=Expensive</h3>
     <script src="location.js"></script>
   </body>
 </html>
