--- a/frontendMod2ProjectJapanForGithub/place.html
+++ b/frontendMod2ProjectJapanForGithub/place.html
@@ -8,6 +8,7 @@
   <body>
     <a href="index.html">Home</a>
     <h2>Place:</h2>
+    <h3 class="price-range">0=Free 1=Cheap 2=Medium 3=Expensive</h3>
 
     <script src="place.js"></script>
   </body>
