add gif file for demo

--- a/frontendMod2ProjectJapanForGithub/index.html
+++ b/frontendMod2ProjectJapanForGithub/index.html
@@ -8,6 +8,8 @@
       href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap"
       rel="stylesheet"
     />
+    <!-- <link rel="shortcut icon" href="/favicon (2).ico" type="image/x-icon" /> -->
+    <link rel="icon" href="/favicon (2).ico" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -24,7 +26,6 @@
     </header>
     <main>
       <aside class="side-bar" style="width:15%">
-        <h3 class="w3-bar-item">Ah Decisions, Decisions</h3>
         <h3>Search By City</h3>
         <a
           href="http://localhost:3001/location.html?location=Tokyo"
